--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM python:3.9 as builder
 
-WORKDIR /usr/src/app
+WORKDIR /usr/projects/autopostingbot
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
@@ -15,7 +15,7 @@ RUN pip install --upgrade pip
 COPY . .
 
 COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/projects/autopostingbot/wheels -r requirements.txt
 
 
 FROM python:3.9
@@ -35,8 +35,8 @@ RUN apt-get update \
     && apt-get install netcat -y
 RUN apt-get upgrade -y && apt-get install dos2unix
 
-COPY --from=builder /usr/src/app/wheels /wheels
-COPY --from=builder /usr/src/app/requirements.txt .
+COPY --from=builder /usr/projects/autopostingbot/wheels /wheels
+COPY --from=builder /usr/projects/autopostingbot/requirements.txt .
 RUN pip install --no-cache /wheels/*
 
 COPY ./entrypoint.sh $APP_HOME
