--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,36 @@ version: '3.7'
 
 services:
   web:
-    build: ./
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: python app.py
+    restart: always
     volumes:
-      - .:/usr/src/app/
+      - .:/usr/projects/autopostingbot
     ports:
       - 8000:8000
+    env_file:
+      - ./config.ini
+    depends_on:
+      - db
+  db:
+    image: postgres:13.3
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./config.ini
+    ports:
+      - 5431:5432
+  redis:
+    image: "redis:alpine"
+    restart: always
   celery:
-    build: ./
+    build: .
     command: celery -A proj  worker -l INFO
     volumes:
-      - .:/usr/src/app/
+      - .:/usr/projects/autopostingbot
+    restart: always
     depends_on:
       - web
       - redis
-  db:
-    image: postgres:12.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/posting_data/
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=top1Dron
-      - POSTGRES_DB=autopostingdb
-  redis:
-    image: "redis:alpine"
-
-volumes:
-  postgres_data:
